--- a/AFD-manuscript.Rmd
+++ b/AFD-manuscript.Rmd
@@ -3,9 +3,9 @@ title: "AFD_Draft1"
 author: "Russell Dinnage"
 date: "Wednesday, April 09, 2014"
 output:
-  html_document: default
-  md_document: null
   pdf_document: default
+  md_document: null
+  html_document: default
   word_document: default
 bibliography: /home/din02g/Google Drive/References/AFD.bib
 ---
@@ -41,14 +41,15 @@ The goal of this study is to determine the alignment-free methods, and their par
 
 ## Simulated Datasets
 
-## *Simulated genomes from simulated phylogenies*
+### *Simulated genomes from simulated phylogenies*
 
 In order to test the accuracy of different alignment-free methods, we first simulated genomic data using known, underlying phylogenies. We based our analysis on a set of 156 randomly generated phylogenies. Each phylogeny was simulated under a birth-death process using the Artificial Life Framework (ALF) software [@Dalquen2012]. All trees used the same birth rate (0.04) and death rate (0.025) parameters, and were run until each phylogeny had 300 terminal species. We used three different divergence rates (52 phylogenies for each) such that the maximum divergence achieved in the phylogeny was high: 800 PAM units, medium: 600 PAM units, or low: 300 PAM units.  A PAM unit is the number of point accepted mutations--changes that replace a single amino acid in a protein with another, and are accepted by natural selection [@Dayhoff1978]--that have occured per 100 amino acids.
 
 The ALF software simulates the evolution of genomic sequences along these input phylogenies using various parameters to customize the results. We used a standard set of parameters for all phylogenies for consistently, with the goal of a realistically complex evolutionary model. We simulated 20 independent genes across each phylogeny to form our 'genome'. The overall sequence substitution model we used was the 'CPAM' model, which simulates sequences evolution by using empirical codon substitution rates. Insertion and deletions happened at a base rate of 0.0001 per substitution with their length determined by a Zipfian distribution with parameter 1.821 (the default), with a maximum length of 50. Substitution rate variation between different genes was incorporated using 5 randomly assigned substitution classes with a gamma distribution with alpha and beta parameter equal to 1, and a proportion of invariable sites equal to 0.01. Rate heterogeneity among the 20 genes was also allowed and was distributed according to a gamma distribution with alpha and beta parameter of 1. Gene length was distributed according to a gamma distribution (with alternate parameterization) with parameter k set to 2.4019, and theta set to 133.8063. 
 
-## *Simulated communities*
+### *Simulated communities*
 
+All community simulations were conducted in the statistical language 'R' [@RDevelopmentCoreTeam2010a].
 We used the 152 simulated phylogenies and their accompanying genomes to create two different sets of simulated communities, to test different aspects of the alignment-free methods.
 
 * Community Set 1: 
@@ -61,7 +62,7 @@ This set consists of 270 communities. Using three different underlying phylogeni
 
 Additionally, we used sets 2 and 3 to get an estimate of the time it takes for each of the methods to achieve their results, and how this scales with the number of species.
 
-## _Sub-communities_
+### _Simulated Sub-Communities_
 
 Each community in the above sets will be considered a regional species pool. We also generated sub-communities which represent local communities so that we can test the ability of the different phylogenetic methods to accurately reflect phylogenetic structure based on the underlying tree. We did this analysis on a sub-set of Community Set 1---2000 of the 4000 communities were chosen at random because of time constrainsts. To do the comparison, we simulated local community assembly from the regional species pool for 90 communities. We simulated local 30 communities for each of three different species richness levels: 24% of the regional pool, 36% of the regional pool, and 48% of the regional pool. Within each species richness level 10 communities were simulated under a 'phylogenetically under-dispersed' model, 10 were randomly simulated, and 10 were "phylogenetically over-dispersed". Each simulation consisted of an initial random assembly step, where 40%, 60% and 80% (for the three species richness levels) of the regional pool were randomly selected, followed by a 'filtering' step. The three communities 'filtering' models were based modified from @Kraft2007:
 
@@ -78,22 +79,35 @@ For each community we generated a matrix of genetic distances between all specie
 
 ### *Alignment-based Method*
 
-For each community we aligned each of the 2-10 simulated genes separately using Muscle software [@Edgar2004] with the default settings. We then concatenated these aligned genes together to create a genetic supermatrix. We chose Muscle because it is used frequently in the literature, and because it is one of the fastest alignment methods, and so is likely to be used in situations where there is a lot of data.
-We then used this supermatrix to create a maximum likelihood phylogeny using the software RaxML [@Stamatakis2014]. Again, we chose this software because it is the fastest ML phylogeny program available, and is the only one that can feasibly create phylogenies from massive data-sets.
+For each community we aligned each of the 2-10 simulated genes separately using MUSCLE software [@Edgar2004] with the default settings---e.g.:
 
-Genetic distances were drawn from this phylogeny by generated all pairwise distance by measuring the branch-lengths separating two species on the tree. We generated two sets of distances, one with the raw phylogeny from the ML analysis, the other from the same phylogeny, only with its branches rescaled to form an ultrametric tree using penalized likelihood (lambda=1) [@Sanderson2002] in the 'chronopl' function in R package 'ape' [@Paradis2004]. 
+```
+muscle64 -in unaligned.fa -out alignment.fa
+```
+
+We then concatenated these aligned genes together to create a genetic supermatrix. We chose MUSCLE because it is used frequently in the literature, and because it is one of the fastest alignment methods, and so is likely to be used in situations where there is a lot of data. We then used this supermatrix to create a maximum likelihood (ML) phylogeny using the software RaxML [@Stamatakis2014]---with the following settings:
+
+```
+raxmlHPC-PTHREADS-AVX -s alignment.fa -n outfile -m GTRGAMMA -T 4 -p 1149135 -w temppath
+```
+
+Again, we chose this software because it is the fastest ML phylogeny program available and, besides FastTree [@Price2010], is the only one that can feasibly create phylogenies from massive data-sets.
+
+Genetic distances were drawn from this phylogeny by generated all pairwise distance by measuring the branch-lengths separating two species on the tree. We generated two sets of distances, one with the raw phylogeny from the ML analysis, the other from the same phylogeny, only with its branches rescaled to form an ultrametric tree using penalized likelihood (lambda=1) [@Sanderson2002] in the 'chronopl' function in R package 'ape' [@Paradis2004].
+
+We created one additional alignment-based distance, without referencing the phylogeny. We calculated a pairwise genetic distance matrix directly from the alignment using the @Kimura1980 model of base-pair subsitution ("K80" distance). A phylogeny was created from this distance matrix using UPGMA and neighbour-joining (NJ) algorithms, using the 'fastcluster' [@Mullner2013], and 'ape' packages, respectively, in R. The same methods were applied on all pairwise genetic distance matrices generated from alignment-free methods, as described below.
 
 ### *Alignment-free Methods*
 
-For each community, we also generated genetic distance estimates using methods which do not require alignment, and then created phylogenies from these genetic distances using hierarchical clustering (UPGMA), using the 'fastcluster' package in R [@Mullner2013].
+For each community, we also generated genetic distance estimates using methods which do not require alignment, and then created phylogenies from these genetic distances using hierarchical clustering (UPGMA) and neighbour-joining algorithms(NJ). 
 
 We generated alignment-free genetic distances using the following methods, based on @Cheng2013: 
 
 **Methods based on k-mer word frequency**
 
-* Feature Frequency Profiles (FFP; @Jun2010)
-* Return Time Distribution (RTD; ref)
-* Frequency Chaos Game Representation (FCGR: ref)
+* Feature Frequency Profiles [FFP; @Jun2010]
+* Return Time Distribution [RTD; @Kolekar2012]
+* Frequency Chaos Game Representation [FCGR: @Hatje2012]
 
 **Methods based on substrings**
 
@@ -101,16 +115,16 @@ We generated alignment-free genetic distances using the following methods, based
 
 **Methods based on information theory**
 
-* Base-base Correlation (BBC; ref)
-* Information correlation and partial information correlation (ICPIC; ref)
+* Base-base Correlation [BBC; @Liu2008]
+* Information correlation and partial information correlation [ICPIC; @Gao2012]
 
 **Methods based on DNA graphical representation**
 
-* 2D Graphical Representation-Statistical Vector (2DSV; ref)
-* 2D Graphical Representation-Moment Vector (2DMV; ref)
-* 2D Graphical Representation-Natural Vector (2DNV; ref) 
+* 2D Graphical Representation-Statistical Vector [2DSV; @Huang2011]
+* 2D Graphical Representation-Moment Vector [2DMV; @Yu2010]
+* 2D Graphical Representation-Natural Vector [2DNV; @Deng2011] 
 
-These methods have been thoroughly described elsewhere, but for the reader's benefit we provide a brief description here.
+These methods have been thoroughly described elsewhere [e.g. see @Cheng2013], but for the reader's benefit we provide a brief description here.
 
 **FFP**
 
@@ -152,31 +166,43 @@ All methods were implemented using the python package "Alignment-free Genome Phy
 
 ### Comparing estimated genetic distances and topology to the truth
 
-### Diversity Metrics 
+We compared the branchlengths and topology of all methods to the 'true' phylogeny and to each other. For the "K80" alignment based distances and all of the alignment-free methods, we compared the raw distances by calculating the pierson correlation between the distances of all pairs of species. We also compared the distance after transforming them to ultrametric distances by using the UPGMA algorithm to create a rooted tree. In order to convert this correlation to a distance measure, we took `1 - correlation(distances)`, so the distance ranged between 0 for perfect correlation to 2 for perfect negative correlation. A value of 1 represents no correlation whatsoever.
 
-### Comparing ecological distance to genetic distances
+To compare the topology of the phylogenies we calculated the Robinson-Foulds metric [@Robinson1981]: a distance measure for unrooted trees that is defined as the number of partitions of data implied by the first tree but not the second tree plus the number of partitions implied by the second tree but not the first tree.
 
-#### *Dataset*
+## Comparing ecological distance to genetic distances
 
-#### *Statistical Analysis*
+### *Dataset*
+
+### *Statistical Analysis*
 
 #**Results**
 
+
+
 #**Discussion**
 
-Despite considerable work on the development of alignment free methods of phylogenetic reconstruction of the past two decades, the use of alignment followed by model-based phylogenetic inference is still the most common way to analyse genetic data. Because of this historic preference for alignment based methods, ecologists who have had to construct there own phylogenies for phylogenetic ecological analyses have largely followed suit. But is there a simpler and faster way that ecologists can produce phylogenies of comparable usefulness, especially for increasingly massive ecological data-sets? This study would suggest that there is: alignment free methods. Here, we showed that many alignment free methods produce as good, and often better approximations to an underlying 'true' phylogeny.
+Despite considerable work on the development of alignment free methods of phylogenetic reconstruction over the past two decades, the use of alignment followed by model-based phylogenetic inference is still the most common way to analyse genetic data. Because of this historic preference for alignment based methods, ecologists who have had to construct there own phylogenies for phylogenetic ecological analyses have largely followed suit. But is there a simpler and faster way that ecologists can produce phylogenies of comparable usefulness, especially for increasingly massive ecological data-sets? This study would suggest that there is: alignment free methods. Here, we showed that many alignment free methods produce as good, and often better approximations to an underlying 'true' phylogeny.
 
 In the introduction to this paper, we wrote about how ecologists are mainly interested in branch-lengths, rather than the topology of phylogenetic trees, because it is phylogenetic distance which is the most likely to predict species' differences in their ecology. Here, we showed that several alignment free methods better reflected phylogenetic distance than the alignment based method. However, we showed that the phylogenies generated from hierarchical clustering of alignment free genetic distances were also more topologically accurate than the alignment based method. It makes sense that if your branch-lengths are poorly estimated, this will affect the accuracy of topological reconstruction, especially if some branch-lengths are very similar. So we expect branch-length and topological accuracy to be strongly but not perfectly correlated. If this is the case more generally, then why have people continued to use alignment based methods? Part of the answer is that there are surprisingly few studies that actually compare the performance of alignment based methods with alignment free methods.
 
-When introducing new alignment free methods, studies usually test the performance of them using simulation. However, most of these studies use an alignment based method as the baseline. They conclude that if their alignment free method correlates well with the alignment based method then it is a good method. However, this assumes the alignment based method is reflecting the underlying 'true' phylogeny well, if not, then being less correlated with it could in fact be considered a good thing. A review of several alignment free methods (ref) compared the alignment free based phylogenies to a maximum likelihood phylogeny estimated using the known 'true' alignment, and concluded they did more poorly. This is clearly not a fair comparison, as the alignment part of the alignment based method was not undertaken. Another review that properly tested several alignment based methods against a full alignment based method (ref), concluded, similarly to this study, that they were more accurate. The fact is that most studies assume that alignment is the best way to go, because of a bias towards a particular philosophy of phylogenetic reconstruction: that it should be based on an evolutionary model.
+When introducing new alignment free methods, studies usually test the performance of them using simulation. However, most of these studies use an alignment based method as the baseline. They conclude that if their alignment free method correlates well with the alignment based method then it is a good method. However, this assumes the alignment based method is reflecting the underlying 'true' phylogeny well, if not, then being less correlated with it could in fact be considered a good thing. A review of several alignment free methods (ref) compared the alignment free based phylogenies to a maximum likelihood phylogeny estimated using the known 'true' alignment, and concluded they did relatively poorly. This is clearly not a fair comparison, as the alignment part of the alignment based method was not undertaken. Another review that properly tested several alignment based methods against a full alignment based method (ref) by comparing the result to a known underlying phylogeny, concluded, similarly to this study, that alignment-free methods were more accurate. The fact is that most studies assume that alignment is the best way to go, because of a bias towards a particular philosophy of phylogenetic reconstruction: that it should be based on an evolutionary model.
 
-The main reason that alignment based methods are the method of choice is because of the post-alignment step, which is explicitly model based. There is a strong desire to couch a phylogenetic hypothesis in a modeling framework, allowing the possibility of discussing the merits of alternative models, and allowing better expression of uncertainty. Indeed, this is a solid argument for modeling approaches, but until recently these modeling approaches require an initial step, which usually does not involve a model of evolution: sequence alignment (or homology estimation). Sequence alignment algorithms are generally heuristic methods rather than an explicit model of any process, introducing some arbitrariness into the overall approach. Indeed most evolutionary models of sequence evolution assume that the input alignment is the true alignment. This is probably why there has been an increasing interest in simultaneously modeling alignment and phylogenetic inference, with some recent progress (refs). This is a promising area, however, these techniques at the moment are very time-consuming, especially for large data-sets. Since most systematists study single small taxonomic groups in individual studies, the amount of divergence is small, and the issues with accurate alignment are consequently also small. But modelling sequence evolution allows systematists to get the information they want. In this study we have modeled much greater evolutionary divergence and levels of taxon sampling than usually seen in most systematic studies, but which are frequently encountered by ecologists.
+The main reason that alignment based methods are the method of choice is because of the post-alignment step, which is explicitly model based. There is a strong desire to couch a phylogenetic hypothesis in a modeling framework, allowing the possibility of discussing the merits of alternative models, and allowing better expression of uncertainty. Indeed, this is a solid argument for modeling approaches, but until recently these modeling approaches all required an initial step, which usually does not involve a model of evolution: sequence alignment (or homology estimation). Sequence alignment algorithms are generally heuristic methods rather than an explicit model of any process, introducing some arbitrariness into the overall approach. Indeed most evolutionary models of sequence evolution assume that the input alignment is the true alignment. This is probably why there has been an increasing interest in simultaneously modeling alignment and phylogenetic inference, with some recent progress (refs). This is a promising area, however, these techniques at the moment are very time-consuming, especially for large data-sets. Since most systematists study single small taxonomic groups in individual studies, the amount of divergence is small, and the issues with accurate alignment are consequently also small. But modelling sequence evolution allows systematists to get the information they want. In this study we have modeled much greater evolutionary divergence and levels of taxon sampling than usually seen in most systematic studies, but which are frequently encountered by ecologists.
 
-Modelling evolution is most important when trying to distinguish the order of branching of organisms that have fairly similar branch-lengths between them. When branch-lengths vary greatly, it is simple to find which organisms groups together and how they nest within different groups. Combined with other considerations -- chiefly choosing an appropriate outgroup -- we can use a phylogenetic topology to infer past evolutionary events. Systematists in particular are interested in getting this right, and especially for those more ambiguous groups who are all similarly related to each other. On the other hand, for ecologists, knowing which of a groups of similarly related organisms fall into the same natural grouping is of much less relevance. Regardless of which groups diverged first, if they have similar branch-lengths between them, they are expected to have a similar degree of ecological divergence. For ecologists, getting the overall pattern of branch-lengths correct should be the first priority. Based on the results of this study, we would recommend using an alignment free method for ecological studies, particularly the metric introduced by (ref): K~r~, which outperformed the other metrics, and has a number of other benefits as well.
+Modelling evolution is most important when trying to distinguish the order of branching of organisms that have fairly similar branch-lengths between them. When branch-lengths vary greatly, it is simple to find which organisms groups together and how they nest within different groups. Combined with other considerations---chiefly choosing an appropriate outgroup---we can use a phylogenetic topology to infer past evolutionary events. Systematists in particular are interested in getting this right, and especially for those more ambiguous groups which are all similarly related to each other. On the other hand, for ecologists, knowing which of a group of similarly related organisms fall into the same natural grouping is of much less relevance. Regardless of which groups diverged first, if they have similar branch-lengths between them, they are expected to have a similar degree of ecological divergence. For ecologists, getting the overall pattern of branch-lengths correct should be the first priority. Based on the results of this study, we would recommend using an alignment free method for ecological studies, particularly the metric introduced by @Haubold2009: K~r~, which outperformed the other metrics, and has a number of other benefits as well.
 
-K~r~ is the only alignment free method tested here to be based on an evolutionary model, which is perhaps why it is as accurate as it is. The evolutionary model allows Kr to be an estimate of a quantity that diverges linearly with time, meaning it should reflect time since divergence well. Most other metrics are known to theoretically diverge with increasing sequence divergence, but there is no guarantee that this divergence is linear with respect to the evolutionary processes generating the differences, namely base-pair substitutions occurring at a particular rate through time. Indeed, most alignment free distance metrics diverge rapidly with initial evolutionary change in a sequence but then rapidly saturate as these changes become greater (fig ?). A way of dealing with this issue has recently been proposed, whereby k-mer based distance are adjusted in a taxon specific way using machine learning techniques (ref). However, the adjustments are trained on subset of 'known' distances, which are based on a sequence alignment. This is useful if we want our alignment free methods to produce an answer as similar as possible to the answer using alignment. K~r~ has an additional advantage over some of the other methods in that it has no parameters. K-mer based methods, on the other hand, require choosing a value for the word length K, and it is not always clear a priori which is the best. Most studies have concluded that a value of K somewhere between 6 and 12 works well (refs), and this study supports that as well. K~r~ is also potentially extendable, since it is model based. More complex models could be incorporated into its calculation, uncertainty could be incorporated, or its basic modelling principles could be incorporated into a full evolutionary model taking place across a tree instead of just a single pairwise pathway, allowing full phylogenetic estimation in one go without alignment. The authors point out that K~r~ becomes less more less stable and upwardly biased when the average number of substitutions per site become greater than about 0.6. In our study we show that this issue causes no worse a problem for correlation with the true branch-lengths than it does for the alignment based method used here.
+K~r~ is the only alignment free method tested here to be based on an evolutionary model, which is perhaps why it is as accurate as it is. The evolutionary model allows K~r~ to be an estimate of a quantity that diverges linearly with time, meaning it should reflect time since divergence well. Most other metrics are known to theoretically diverge with increasing sequence divergence, but there is no guarantee that this divergence is linear with respect to the evolutionary processes generating the differences, namely base-pair substitutions occurring at a particular rate through time. Indeed, most alignment free distance metrics diverge rapidly with initial evolutionary change in a sequence but then rapidly saturate as these changes become greater (fig 4). A way of dealing with this issue has recently been proposed, whereby k-mer based distance are adjusted in a taxon specific way using machine learning techniques (ref). However, the adjustments are trained on subset of 'known' distances, which are based on a sequence alignment. This is useful if we want our alignment free methods to produce an answer as similar as possible to the answer using alignment, for consistency, even if we know the alignment based method may not be the best approximation of the truth. 
 
-Overall, this study does not support the wholesale replacement of alignment based techniques by alignment free methods. We only looked at one combination of alignment based techniques; others might perform better. However, we used a combination of alignment based methods likely to be used in situations with large data-sets, because of their relatively rapid execution times. There are many other alignment methods besides MUSCLE which may work better in our situation, and also many other methods for constructing phylogenies, once an alignment is obtained, besides RAxML, such as Bayesian methods and other slower maximum likelihood algorithms. (I think we are going to have to look at some more alignment based methods before we publish this, I don't think reviewers are going to buy this. Easily doable but will take some time given the slowness of alignment based methods. My suggestion is that I use a smaller subset of the replications to run other alignment based combos on, just to show they are (hopefully) consistent with the main result). 
+K~r~ has an additional advantage over some of the other methods in that it has no parameters. K-mer based methods, on the other hand, require choosing a value for the word length K, and it is not always clear a priori which is the best. Most studies have concluded that a value of K somewhere between 6 and 12 works well (refs), and this study supports that as well. K~r~ is also potentially extendable, since it is model based. More complex models could be incorporated into its calculation, uncertainty could be incorporated, or its basic modelling principles could be incorporated into a full evolutionary model taking place across a tree instead of just a single pairwise pathway, allowing full phylogenetic estimation in one go without alignment. The authors point out that K~r~ becomes less stable and upwardly biased when the average number of substitutions per site become greater than about 0.6. In our study we show that this issue causes no worse a problem for correlation with the true branch-lengths than it does for the alignment based method used here.
+
+Overall, this study does not support the wholesale replacement of alignment based techniques by alignment free methods. We only looked at one combination of alignment based techniques; others might perform better. However, we used a combination of alignment based methods likely to be used in situations with large data-sets, because of their relatively rapid execution times. There are many other alignment methods besides MUSCLE which may work better in our situation, and also many other methods for constructing phylogenies, once an alignment is obtained, besides RAxML, such as Bayesian methods and other slower maximum likelihood algorithms. (I think we are going to have to look at some more alignment based methods before we publish this, I don't think reviewers are going to buy this. Easily doable but will take some time given the slowness of alignment based methods. My suggestion is that I use a smaller subset of the replications to run other alignment based combos on, just to show they are (hopefully) consistent with the main result). Even if there exists an alignment free method that will on average exeed the accuracy of the alignment-free methods, there will still be a strong incentive to use the alignment-free methods when data-sets are large, simply due to the massive saving in computation resources required.
+
+* Talk about relevance to ecology more specifically
+  - Phylogenetic ecology is based on several levels of approximation in any case
+  - Traits should not be expected to correlate exactly with phylogeny in any case
+  - Genetic distance are fine for ecology, except in a few rare cases
+    * when should topology matter in ecology?
 
 #Figures
 
